--- a/PU-Adapter/PU-Adapter.csproj
+++ b/PU-Adapter/PU-Adapter.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Enums\Avgångskod.cs" />
     <Compile Include="Enums\PersonType.cs" />
     <Compile Include="PknodPlusData.cs" />
     <Compile Include="PknodData.cs" />
