--- a/PU-Adapter.Test/PU-Adapter.Test.csproj
+++ b/PU-Adapter.Test/PU-Adapter.Test.csproj
@@ -62,6 +62,7 @@
   <ItemGroup>
     <Compile Include="PknodDataTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StringBuilderEx.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
