Nuget release script

--- a/PU-Adapter/PU-Adapter.csproj
+++ b/PU-Adapter/PU-Adapter.csproj
@@ -41,6 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\VersionInfo.cs">
+      <Link>VersionInfo.cs</Link>
+    </Compile>
     <Compile Include="Enums\Avgångskod.cs" />
     <Compile Include="Enums\PersonType.cs" />
     <Compile Include="PknodFetcher.cs" />
