--- a/PU-Adapter.Test/PU-Adapter.Test.csproj
+++ b/PU-Adapter.Test/PU-Adapter.Test.csproj
@@ -55,7 +55,9 @@
     </When>
     <Otherwise>
       <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
+        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework">
+          <Private>False</Private>
+        </Reference>
       </ItemGroup>
     </Otherwise>
   </Choose>
@@ -63,6 +65,8 @@
     <Compile Include="PknodDataTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringBuilderEx.cs" />
+    <Compile Include="PknodInterpreterTest.cs" />
+    <Compile Include="CommonData.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
