--- a/PU-Stub/PU-Stub.csproj
+++ b/PU-Stub/PU-Stub.csproj
@@ -83,6 +83,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
+    <Content Include="Index.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
