--- a/PU-Adapter.CommandLine/App.config
+++ b/PU-Adapter.CommandLine/App.config
@@ -1,6 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
+  <configSections>
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="Kentor.PU_Adapter.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+      <!-- more sections-->
+    </sectionGroup>
+    <!-- more sections-->
+  </configSections>
+  <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
     </startup>
+  <applicationSettings>
+    <Kentor.PU_Adapter.Properties.Settings>
+      <setting name="PknodUrl" serializeAs="String">
+        <value>http://pu-stub.azurewebsites.net/snod/</value>
+        <!--<value>http://localhost:49578/snod/</value>-->
+      </setting>
+      <setting name="UserName" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="Password" serializeAs="String">
+        <value />
+      </setting>
+    </Kentor.PU_Adapter.Properties.Settings>
+  </applicationSettings>
 </configuration>
