--- a/PU-Adapter/app.config
+++ b/PU-Adapter/app.config
@@ -1,21 +1,24 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <configSections>
-        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="Kentor.PU_Adapter.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-        </sectionGroup>
-    </configSections>
-    <applicationSettings>
-        <Kentor.PU_Adapter.Properties.Settings>
-            <setting name="PknodUrl" serializeAs="String">
-                <value>https://prod.pu.sll.se:10443/snod/</value>
-            </setting>
-            <setting name="UserName" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="Password" serializeAs="String">
-                <value />
-            </setting>
-        </Kentor.PU_Adapter.Properties.Settings>
-    </applicationSettings>
+  <configSections>
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="Kentor.PU_Adapter.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
+    </sectionGroup>
+  </configSections>
+  <applicationSettings>
+    <Kentor.PU_Adapter.Properties.Settings>
+      <setting name="PknodUrl" serializeAs="String">
+        <value>https://prod.pu.sll.se:10443/snod/</value>
+      </setting>
+      <setting name="UserName" serializeAs="String">
+        <value/>
+      </setting>
+      <setting name="Password" serializeAs="String">
+        <value/>
+      </setting>
+    </Kentor.PU_Adapter.Properties.Settings>
+  </applicationSettings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
+  </startup>
 </configuration>
