Make cert bypass configurable

--- a/PU-Adapter.CommandLine/App.config
+++ b/PU-Adapter.CommandLine/App.config
@@ -22,6 +22,9 @@
       <setting name="Password" serializeAs="String">
         <value />
       </setting>
+      <setting name="AllowUnsafePuProdCert" serializeAs="String">
+        <value>True</value>
+      </setting>
     </Kentor.PU_Adapter.Properties.Settings>
   </applicationSettings>
 </configuration>
