--- a/PU-Adapter/app.config
+++ b/PU-Adapter/app.config
@@ -11,10 +11,13 @@
         <value>https://prod.pu.sll.se:10443/snod/</value>
       </setting>
       <setting name="UserName" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="Password" serializeAs="String">
-        <value/>
+        <value />
+      </setting>
+      <setting name="AllowUnsafePuProdCert" serializeAs="String">
+        <value>False</value>
       </setting>
     </Kentor.PU_Adapter.Properties.Settings>
   </applicationSettings>
