--- a/PU-Adapter/Properties/Settings.settings
+++ b/PU-Adapter/Properties/Settings.settings
@@ -11,5 +11,8 @@
     <Setting Name="Password" Type="System.String" Scope="Application">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="AllowUnsafePuProdCert" Type="System.Boolean" Scope="Application">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
