--- a/PU-Stub/PU-Stub.csproj
+++ b/PU-Stub/PU-Stub.csproj
@@ -88,6 +88,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\SnodWithFakeUnknownController.cs" />
     <Compile Include="Controllers\SnodController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
