By default, use local stub

--- a/PU-Adapter.CommandLine/App.config
+++ b/PU-Adapter.CommandLine/App.config
@@ -13,8 +13,8 @@
   <applicationSettings>
     <Kentor.PU_Adapter.Properties.Settings>
       <setting name="PknodUrl" serializeAs="String">
-        <value>http://pu-stub.azurewebsites.net/snod/</value>
-        <!--<value>http://localhost:49578/snod/</value>-->
+        <!--<value>http://pu-stub.azurewebsites.net/snod/</value>-->
+        <value>http://localhost:49578/snod/</value>
       </setting>
       <setting name="UserName" serializeAs="String">
         <value />
