Parse the Civilstånd field

--- a/PU-Adapter/PU-Adapter.csproj
+++ b/PU-Adapter/PU-Adapter.csproj
@@ -47,6 +47,7 @@
       <Link>VersionInfo.cs</Link>
     </Compile>
     <Compile Include="Enums\Avgångskod.cs" />
+    <Compile Include="Enums\Civilstånd.cs" />
     <Compile Include="Enums\Kommunkoder.cs" />
     <Compile Include="Enums\Länskoder.cs" />
     <Compile Include="Enums\PersonType.cs" />
