Refactor: Introduce list of FieldDefinitions generated from documentation, added GetStringFieldFromPosition method to PknodData

--- a/PU-Adapter.Test/PU-Adapter.Test.csproj
+++ b/PU-Adapter.Test/PU-Adapter.Test.csproj
@@ -66,6 +66,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="FieldDataTest.cs" />
     <Compile Include="PknodDataTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringBuilderEx.cs" />
