Added the setting AllowUnsafePuTestCert in readme and added the setting in settings

--- a/PU-Adapter/Properties/Settings.settings
+++ b/PU-Adapter/Properties/Settings.settings
@@ -14,5 +14,8 @@
     <Setting Name="AllowUnsafePuProdCert" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="AllowUnsafePuTestCert" Type="System.Boolean" Scope="Application">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
