--- a/PU-Adapter/app.config
+++ b/PU-Adapter/app.config
@@ -19,6 +19,9 @@
       <setting name="AllowUnsafePuProdCert" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="AllowUnsafePuTestCert" serializeAs="String">
+        <value>False</value>
+      </setting>
     </Kentor.PU_Adapter.Properties.Settings>
   </applicationSettings>
   <startup>
